<resources>
    <string name="app_name">SE1503_Ichinsan_BookApplication</string>
    <string name="title_home">Home</string>
    <string name="search_page">Search</string>
    <string name="title_cart">Your Cart</string>
    <string name="bookDetailActivity">BookDetailActivity</string>
    <string name="previousActivity">PreviousActivity</string>
    <string name="title_user">User</string>
    <string name="cartToOrder">CartToOrder</string>
    <string name="title_logo">Ichinsan</string>
    <string name="label_search">Search</string>
    <string name="search_keyword">searchKeyword</string>
    <string name="default_web_client_id_string" translatable="false">1019368190468-d8akp5mvdusin87p3ndtg5uhuj76l2ro.apps.googleusercontent.com</string>
    <string name="transaction">Transaction</string>
    <string name="notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="quantity_xx">Quantity: XX</string>
    <string name="total_money_xx">XXX.XXX VND</string>
    <string name="title_your_profile">Your Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="title_order_detail_preview">Preview</string>
    <string name="label_select">Select</string>
    <string name="label_check_out">Check Out</string>
    <string name="title_receiver">Receiver</string>
    <string name="title_edit_receiver_detail">Edit Receiver</string>
    <string name="title_add_receiver_detail">Add Receiver</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="receiver">Receiver</string>
    <string name="order_total">Total</string>
    <string name="publisher_name">Publisher Name</string>
    <string name="currency_vnd">VND</string>
    <string name="currency_usd">$</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="unknown">Unknown</string>
    <string name="default_avatar">https://upload.wikimedia.org/wikipedia/commons/c/cd/Portrait_Placeholder_Square.png</string>
    <string name="getSpecificFragment">GetSpecificFragment</string>
    <string name="getUserProfile">GetUserProfile</string>
    <string name="getUserOrder">GetUserOrder</string>
    <string name="getBookDetail">GetBookDetail</string>
    <string name="preferenceCart">PreferenceCart</string>
    <string name="preferenceBookDetail">PreferenceBookDetail</string>
    <string name="PreferenceUserProfile">PreUserProfile</string>
    <string name="userReceiverId">UserReceiverId</string>
    <string name="userReceiverDetail">UserReceiverDetail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_category">Book Category</string>
    <string name="book_name">Book Name</string>
    <string name="book_price">Book Price</string>
    <string name="book_des">Description</string>
    <string name="view_more">View More</string>
    <string name="book_detail">Detail</string>
    <string name="book_supplier">Supplier</string>
    <string name="book_language">Language</string>
    <string name="book_size">Size</string>
    <string name="book_page">Page</string>
    <string name="book_author">Author</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_release_year">Release Year</string>
    <string name="book_staus">Book Status</string>
    <string name="book_add_to_cart">Add To Cart</string>
    <string name="cart_purchase">Purchase</string>
    <string name="cart_total">Total</string>
    <string name="cart_info">Please choose a product</string>
    <string name="cart_remove">Remove</string>
    <string name="cart_number">1</string>
</resources>