<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bookCardItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBookStatus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_staus"
            android:textColor="#4CAF50"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ivBookImage1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/image_book_example" />

        <TextView
            android:id="@+id/tvBookName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBookPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_price"
            android:textColor="#4CAF50"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>