<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.user.profile.ProfileEditActivity">

    <ImageView
        android:id="@+id/ivProfileBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_your_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/ivProfileBack"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit"
        android:backgroundTint="@color/button_colors"
        android:textColor="@color/edittext_text_color"
        app:layout_constraintStart_toEndOf="@+id/tvProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfileAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="138dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFullnameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="145dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileAvatar" />

    <TextView
        android:id="@+id/tvPhoneContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"
        android:text="@string/phone_number"
        android:textColor="#686666"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvPhoneProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailContent" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="304dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhoneProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailProfile" />

    <TextView
        android:id="@+id/tvEmailContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="56dp"
        android:text="@string/email"
        android:textColor="#686666"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvEmailProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvFullnameProfile" />

    <TextView
        android:id="@+id/tvAddressContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:text="@string/address"
        android:textColor="#686666"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvAddressProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneContent" />

    <TextView
        android:id="@+id/tvAddressProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="53dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>